# T0

./: Cargo.toml  README.md
cmd/: Cargo.toml
cmd/src/: main.rs  tcp.rs
flat/: Cargo.toml
flat/idl/: query.fbs  write.fbs
flat/src/: fquery.rs  fwrite.rs  lib.rs
proto/: Cargo.toml  build.rs
proto/idl/ping/: service.proto
proto/idl/prometheus/: service.proto
proto/idl/query/: service.proto
proto/src/: lib.rs  ping.rs  prometheus.rs  query.rs
src/context/: Cargo.toml
src/context/src/: lib.rs
src/core/common/: Cargo.toml
src/core/common/src/: column.rs  index.rs  lib.rs  schema.rs  time.rs  util.rs
src/core/common/src/array/: bitmap.rs  dictionary.rs  mod.rs  primitive.rs
src/core/ql/: Cargo.toml
src/core/ql/src/: error.rs  promql.rs  rosetta.rs
src/core/query/: Cargo.toml
src/core/query/benches/: promql.rs
src/core/query/src/: lib.rs
src/core/query/src/execution/: context.rs  mod.rs
src/core/query/src/language/: mod.rs  promql.rs  rosetta.rs
src/core/query/src/plan/: mod.rs
src/core/runtime/: Cargo.toml
src/core/runtime/src/: error.rs  executor.rs  io.rs  lib.rs
src/core/server/: Cargo.toml
src/core/server/src/: error.rs  lib.rs
src/query/: Cargo.toml
src/query/src/: error.rs  function.rs  lib.rs
src/storage/: Cargo.toml
src/storage/src/: chunk.rs  column.rs  db.rs  error.rs  insert.rs  lib.rs  table.rs
src/storage/src/util/: dictionary.rs  mod.rs  string.rs
tests/prometheus/: Cargo.toml
tests/prometheus/src/: benchmark.rs  remote_write.rs  vm_insert.rs
