[workspace]
members = [
    "src/core/runtime",
    "src/core/common",
    "src/core/ql",
    "src/core/server",
    "src/storage",
    "tests/prometheus",
    "cmd",
    "src/query",
    "src/context",
    "flat"
]

default-members = ["cmd"]

[profile.release]
codegen-units = 1
debug = true
lto = "thin"

[profile.bench]
inherits = "release"
