[package]
name = "t0"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1.28", default-features = false }
storage = { path = "../src/storage" }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "net"] }
tonic = "0.6.2"
common = { path = "../src/core/common" }
core_affinity = "0.5.10"
clap = { version = "3.1.6", features = ["derive", "env"] }
num_cpus = "1.13.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
context = { path = "../src/context" }
query = { path = "../src/query" }
bytes = "1.1.0"
prost = "0.9.0"
flat = { path = "../flat" }
