[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "net"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
fastrand = "1.7.0"
http = "0.2.6"
hyper = { version = "0.14.18", features = ["full"] }
snappy = "0.4.0"
prost = "0.9.0"
flat = { path = "../../flat" }
flatbuffers = "2.1.1"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
