[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-lite = "1.12.0"
core_affinity = "0.5.10"
snafu = "0.7.0"
async-channel = "1.6.1"
polling = "2.2.0"
socket2 = { version = "0.4.4", features = ["all"] }
async-task = "4.1.0"
concurrent-queue = "1.2.2"
libc = "0.2.119"
tokio = "1.17.0"
futures-timer = "3.0.2"
