[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.18", features = ["http2", "client", "server", "stream"] }
runtime = { path = "../runtime" }
snafu = "0.7.0"
hashbrown = "0.12.0"
http = "0.2.6"
http-body = "0.4.4"
async-trait = "0.1.52"
tower = { version = "0.4.12", features = ["util"] }
tower-service = "0.3.1"
